<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F2D4AE"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="start"
        android:background="@null"
        android:src="@drawable/back_arrow" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/depositar"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:text="@string/depositar"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/retirar"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_background"
        android:text="@string/retirar"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_background"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="16sp" />





</LinearLayout>
