<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8D4A1"
    tools:context=".IniciarSesionActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="start"
        android:background="@null"
        android:src="@drawable/back_arrow" />


    <!-- Logo en la esquina -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/iniciar_sesion"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <!-- Campo de DNI -->
    <EditText
        android:id="@+id/etDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="150dp"
        android:hint="DNI"
        android:backgroundTint="#000000"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDni"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="50dp"
        android:hint="Contraseña"
        android:backgroundTint="#000000"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <!-- Enlace para crear cuenta -->
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etPassword"
        android:text="@string/no_tiene_cuenta"
        android:textSize="14sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvLinkCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/tvCreateAccount"
        android:text="@string/crear_una_aqui"
        android:textSize="14sp"
        android:textColor="#0000FF"
        android:textStyle="bold" />

    <!-- Botón de iniciar sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/tvCreateAccount"
        android:layout_centerHorizontal="true"
        android:text="@string/iniciar_sesion"
        android:background="@android:color/white"
        android:textColor="#000000" />
</RelativeLayout>
